--- a/login/Templates/login/signupPage.html
+++ b/login/Templates/login/signupPage.html
@@ -1,19 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends 'internship/basic.html' %}
+{% block title%} Signup Page {% endblock%}
+{% block body%}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<div class="container mt-2">
 
-    <title>Signup Page</title>
-</head>
-<body onload="document.signup.reset();">
-<div class="container mt-5">
-    <a href="/login/loginPage/">login</a>
-
+    <h1>Sign Up.</h1>
     <form action="/login/" method="post" name="signup" onsubmit="return validateForm()">{% csrf_token %}
         <div class="form-group">
             <label for="name"><h3>Name</h3></label>
@@ -58,13 +49,9 @@
         <button type="submit" class="btn btn-success mb-3" >SignUp</button>
     </form>
 </div>
+{% endblock%}
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
+{% block js%}
 <script>
     function validateForm() {
         var name = document.forms["signup"]["name"].value;
@@ -80,4 +67,4 @@
 
 
 </script>
-</html>
+{% endblock%}
