added user profile after signup and redirect after login

--- a/login/Templates/login/adminPortal.html
+++ b/login/Templates/login/adminPortal.html
@@ -1,3 +1,4 @@
+<!--admin enter login password here to login as admin and redirecting to admin account-->
 {% extends 'internship/basic.html' %}
 {% block title%} Admin Portal {% endblock%}
 {% block body%}
