after login you can view your profile too

--- a/login/Templates/login/changePassword.html
+++ b/login/Templates/login/changePassword.html
@@ -20,12 +20,15 @@
         </div>
 
         <button  type="submit" id="changepassword"  class="btn btn-success" >Change Password</button>
+        <a href="/login/loginPage/"><button  type="button"   class="btn btn-success" >Login</button></a>
     </form>
 </div>
 
 {% endblock%}
 {% block js%}
 <script>
+
+    /*console.log('ready');
     $('.submitBtn').on('click', function(e){
     e.preventDefault();
     email = $('#email').val();
@@ -36,7 +39,11 @@
     console.log(newpassword);
 
 
-});
+});*/
+    {% if msg|length != 0 %}
+    alert('{{msg}}')
+    {%endif%}
+
 
 </script>
 {% endblock%}
