--- a/login/Templates/login/userProfile.html
+++ b/login/Templates/login/userProfile.html
@@ -44,7 +44,7 @@ a {
   <p><b>Gender: </b>{{user.gender}}</p>
   <p><b>Address: </b>{{user.address}}</p>
    <a href="/login/changePassword/"> <button type="button" class="btn btn-success mb-4" >change password</button></a>
-   <a href="/home/"> <button type="button" class="btn btn-success mb-4" >Visit Website</button></a>
+   <a href="/home/home/{{user.user_id}}"> <button type="button" class="btn btn-success mb-4" >Visit Website</button></a>
 </div>
 </body>
 {% endblock%}
