--- a/webapp/Templates/webapp/home.html
+++ b/webapp/Templates/webapp/home.html
@@ -1,5 +1,5 @@
 {% extends 'webapp/basic.html'%}
-{% block title%}{{user.name}}  {% endblock%}
+{% block title%}Welcome {{user.name}} {% endblock%}
 {% block body %}
 
 <body>
