--- a/webapp/Templates/webapp/home.html
+++ b/webapp/Templates/webapp/home.html
@@ -3,8 +3,9 @@
 {% block body %}
 
 <body>
+    
     <header>
-  <div class="bg-dark collapse" id="navbarHeader" style="">
+  <div class="bg-dark collapse" id="navbarHeader">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
